--- a/q/274951.html
+++ b/q/274951.html
@@ -26,12 +26,70 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>1053</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
-<tr d-ix="1"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
-<tr d-ix="2"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
-<tr d-ix="3"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>049</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>1053</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="2"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
+<tr d-ix="3"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> <s>1201</s> 1053 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>50</s> 49 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>∞Íonîü2íε`U0LsãεXô}Σ˜O]í€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
+</code></pre>
+<p>Brute-force. Generates all <span class="math-container">\$2^k\times 2^k\$</span> sized matrices consisting of 0s and 1s, and will output the first valid one for the given input-integer <span class="math-container">\$n\$</span>.</p>
+<p>-1 byte by changing the <code>∞&lt;on1š</code> (-1 and prepend <span class="math-container">\$1\$</span> manually) to <code>∞Íonî</code> (-2 and ceil the <span class="math-container">\$0.25\$</span> to <span class="math-container">\$1\$</span>)</p>
+<p><a href="https://tio.run/##AVYAqf9vc2FiaWX//@KInsONb27DrsO8MsOtzrVgVTBMc8OjzrVYw7R9zqPLnE9dw63igqxgLs6UW0TLnGc14oC5IzLOtMO0MsO04oKsw7hPT259T09R//8xNQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AWsAlP9vc2FiaWX/N8aSTj8iIOKGkiAiP05WIv/iiJ7DjW9uw67DvDLDrc61YFUwTHPDo861WMO0Xc61zqPLnE9dw63igqxgLs6UW0TLnGc14oC5IzLOtMO0MsO04oKsw7hPT259T09ZUf8iLlYs/w" rel="nofollow noreferrer">verify the smaller test cases up to n=7</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<p>Step 1: Generate a list of all possible outputs:</p>
+<pre class="lang-python prettyprint-override"><code>∞          # Push an infinite positive list: [1,2,3,4,5,...]
+ Í         # Decrease each by 2 to start at -1: [-1,0,1,2,3,...]
+  o        # Take 2 to the power each: [0.5,1,2,4,8,...]
+   n       # Square each: [0.25,1,4,16,64,...]
+    î      # Ceil each: [1,1,4,16,64,...]
+ü2         # Create overlapping pairs: [[1,1],[1,4],[4,16],[16,64],...]
+  í        # Reverse each pair: [[1,1],[4,1],[16,4],[64,16],...]
+ε          # Map over each pair:
+ `         #  Pop and push both to the stack
+  U        #  Pop the top smaller value, and save it in variable `X`
+  0L       #  Push pair [1,0]
+    s      #  Swap so the larger value is at the top of the stack
+     ã     #  Cartesian product to create all combinations using the 1s/0s
+      ε    #  Map over each list of 1s/0s
+       Xô  #   Split it into blocks of size `X`
+      }    #  Close the inner map
+ Σ         #  Sort by:
+  ˜        #   The flattened
+   O       #   sum (of 1s)
+]          # Close the sort and outer map
+ í         # Reverse each inner list
+  €`       # Flatten the list of list of lists one level down
+           # (which has as side-effect that it reverses the inner lists,
+           # hence the need for `í`)
+</code></pre>
+<p><a href="https://tio.run/##ATMAzP9vc2FiaWX//@KInsONb27DrsO8MsOtzrVgVTBMc8OjzrVYw7R9zqPLnE9dw63igqxg//8" rel="nofollow noreferrer">Try just this first step online.</a></p>
+<p>Step 2: Find the first matrix that's a valid reduction for the given input-integer:</p>
+<pre class="lang-python prettyprint-override"><code>.Δ         # Find the first matrix in this infinite list that's truthy for:
+  [        #  Start an infinite list:
+   D       #   Duplicate the current matrix
+    ˜      #   Flatten it to a list
+     g     #   Pop and push its length
+      5‹   #   If this length is smaller than 5 (e.g. either 4 or 1):
+        #  #    Stop the infinite inner loop
+   2δô2ä€ø #  Split the matrix into four corner-blocks:
+    δ      #   Map over each inner row:
+   2 ô     #    Split it into pairs
+      2ä   #   Then split the entire list into 2 equal parts as well
+        €  #   Map over each inner matrix:
+         ø #    Zip/transpose; swapping rows/columns
+   OO      #  Sum each inner-most matrix
+     n     #  Then square those sums
+  }        # After the infinite loop to reduce it to a 2x2 matrix:
+   OO      # Sum the four values in this matrix as well
+     Q     #  Check whether it now equals the (implicit) input-integer
+           # (after which the found matrix is output implicitly)
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f8/2uX0nHTTRw07lY3ObTm8xejwlkdNaw7v8Pe3zasFEkAF0YY6MGgAwrE60QY6KBBJxBBDBKEGqh@vGsIisQA" rel="nofollow noreferrer">Verify the resulting <span class="math-container">\$n\$</span> for a given matrix to test just this second step</a> (minus leading <code>.Δ</code> and trailing <code>Q</code>). I've added <code>=</code> after both <code>OO</code>, so you can also see the intermediate steps of the reduction.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> <s>1201</s> 1053 bytes</h1>
 <pre><code>/^(0|1)$/bz;x;s/^/0001/;x
 :a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
 G;s/(.*)\n(.*)/\2\n\1/
@@ -69,7 +127,7 @@ y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
 <p>the <code>\&amp;amp;</code> is not an html error, at this point I have started using sed to write and modify sed scripts to build this answer with and when I saw it show up inside of a command I thought it was too cute to change it back. (the actual command it's part of is <code>sa.*a\&amp;amp</code>, or more legibly written as <code>s/.*/\&amp;/mp</code>)</p>
 <p>I'm pretty sure I can get this into the triple digits, so I'm not going to add any really detailed explanation yet; a bit of golfing can change an explanation a lot in sed. once the golfing starts slowing down I'll start breaking things down and explaining them.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 101 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 101 bytes</h1>
 <pre><code>Ｎθ≔⦃⁰⟦0⟧¹⟦1⟧⦄ηＷ∧¬§ηθη«≔⦃⦄η≔ＥιλζＦζＦζＦζＦζ«≔ΣＸ⟦νμλκ⟧²ε≔⁺Ｅ§ιν⁺ξ§§ιμπＥ§ιλ⁺ξ§§ικπδ¿∨¬§ηε‹ΣΣδΣΣ§ηε§≔ηεδ»»§ηθ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fVFBasMwEKTH-hWLThIoEBcKpTn5GEhSQ4_GB8eWaxFZdiS7CQl-SS-htLRf6Rf6mkqOBamhFQhpZ2dmd6WXz7RIVFol4nR6b5t8cvd99TWXddus2nLNFN6SmRdozZ8kPk7vIUJTFFPw7c1HcUehMIRdwQUDHMgMr6oGB81cZmyPCwpbQiyFwNG7djaDyMXLpMacgjDEg4XzSgE-EPjrNE5O-tiWOKx2ps1IUiiNCYWNae_GVmXWzDFD0eq-kuvNVJSG1ON7Cg6-SJcmXRPrNNKJ_3WbQWeOrG-B54Af1PhlmCUsmNb9FHZnFnHBb6ZdcB7lMjFU6LzOCxWX45efvel1qod__YjQ5Fmg-NW_PQM_" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: Lots of brute force, so can only solve inputs with <code>4×4</code> outputs before the heat death of the universe.</p>
@@ -108,7 +166,7 @@ y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fVHdToMwFI6X8hQnXJWkSzZvXNwVN5olOkn0jnDBoEhDKYyCW7bwJN4sRqPP5Ev4Cp52NJlLlATafuf7OYe-fCZ53CRVLPb7967NRtOvs--5rLt20ZVL1pCVN3N8pfiTJLvxFYTu2I0oTPRu4kY9hRwJ65wLBsSXKVlULfHbuUzZhuQUVp6nKR7snHNrM4js-ZqLFoPu4ppwCgL52uOmYbGGH3nJFCkoFJ5xw-9Wi7OqAbL14K8V82zAQ1eSoFqjWSgplJiBbjjEhTZj2swyA9Ep04idABuSSDL4hoKFj8ollmvT1olO_K8rBh0uqWmBZ0Dum9P_xzThlillptBvqhF7-M3UDxxGOS4MCb3TO0HD5en9zN7UMlHD7X-E7uhZuNHr5fQA_AA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: As above but when generating the list of possible solutions, excludes values whose square exceeds the input.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
 <pre><code>M?Gho_SsNmsCMc2sgLtGdfqHs*VTT^UhH4]]Hgf&gt;2eSsgTQZ
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/39fePSM/PrjYL7fY2TfZqDjdp8Q9Ja3Qo1grLCQkLjTDwyQ21iM9zc4oNbg4PSQw6v9/SwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
@@ -140,58 +198,6 @@ M                                                    # define g(G,h)
                                        &gt;2            #   is less than 2
                                      g          Q    # apply g on the result and the input
 </code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>45</s> 44 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>∞Íonîü2íε`U0LsãεXô]€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
-</code></pre>
-<p>Brute-force. Generates all <span class="math-container">\$2^k\times 2^k\$</span> sized matrices consisting of 0s and 1s, and will output the first valid one for the given input-integer <span class="math-container">\$n\$</span>.</p>
-<p>-1 byte by changing the <code>∞&lt;on1š</code> (-1 and prepend <span class="math-container">\$1\$</span> manually) to <code>∞Íonî</code> (-2 and ceil the <span class="math-container">\$0.25\$</span> to <span class="math-container">\$1\$</span>)</p>
-<p><a href="https://tio.run/##AU4Asf9vc2FiaWX//@KInsONb27DrsO8MsOtzrVgVTBMc8OjzrVYw7Rd4oKsYC7OlFtEy5xnNeKAuSMyzrTDtDLDtOKCrMO4T09ufU9PUf//MTU" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AWIAnf9vc2FiaWX/MTXGkk4/IiDihpIgIj9OViL/4oiew41vbsOuw7wyw63OtWBVMExzw6POtVjDtF3igqxgLs6UW0TLnGc14oC5IzLOtMO0MsO04oKsw7hPT259T09ZUf8iLlYs/w" rel="nofollow noreferrer">verify the smaller test cases up to n=15</a>.</p>
-<p><strong>Explanation:</strong></p>
-
-<p>Step 1: Generate a list of all possible outputs:</p>
-<pre class="lang-python prettyprint-override"><code>∞          # Push an infinite positive list: [1,2,3,4,5,...]
- Í         # Decrease each by 2 to start at -1: [-1,0,1,2,3,...]
-  o        # Take 2 to the power each: [0.5,1,2,4,8,...]
-   n       # Square each: [0.25,1,4,16,64,...]
-    î      # Ceil each: [1,1,4,16,64,...]
-ü2         # Create overlapping pairs: [[1,1],[1,4],[4,16],[16,64],...]
-  í        # Reverse each pair: [[1,1],[4,1],[16,4],[64,16],...]
-ε          # Map over each pair:
- `         #  Pop and push both to the stack
-  U        #  Pop the top smaller value, and save it in variable `X`
-  0L       #  Push pair [1,0]
-    s      #  Swap so the larger value is at the top of the stack
-     ã     #  Cartesian product to create all combinations using the 1s/0s
-      ε    #  Map over each list of 1s/0s
-       Xô  #   Split it into blocks of size `X`
-]          # Close the nested maps
- €`        # Flatten the list of list of lists one level down
-           # (which has as side-effect that it reverses the inner lists)
-</code></pre>
-<p><a href="https://tio.run/##ASsA1P9vc2FiaWX//@KInsONb27DrsO8MsOtzrVgVTBMc8OjzrVYw7Rd4oKsYP//" rel="nofollow noreferrer">Try just this first step online.</a></p>
-<p>Step 2: Find the first matrix that's a valid reduction for the given input-integer:</p>
-<pre class="lang-python prettyprint-override"><code>.Δ         # Find the first matrix in this infinite list that's truthy for:
-  [        #  Start an infinite list:
-   D       #   Duplicate the current matrix
-    ˜      #   Flatten it to a list
-     g     #   Pop and push its length
-      5‹   #   If this length is smaller than 5 (e.g. either 4 or 1):
-        #  #    Stop the infinite inner loop
-   2δô2ä€ø #  Split the matrix into four corner-blocks:
-    δ      #   Map over each inner row:
-   2 ô     #    Split it into pairs
-      2ä   #   Then split the entire list into 2 equal parts as well
-        €  #   Map over each inner matrix:
-         ø #    Zip/transpose; swapping rows/columns
-   OO      #  Sum each inner-most matrix
-     n     #  Then square those sums
-  }        # After the infinite loop to reduce it to a 2x2 matrix:
-   OO      # Sum the four values in this matrix as well
-     Q     #  Check whether it now equals the (implicit) input-integer
-           # (after which the found matrix is output implicitly)
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f8/2uX0nHTTRw07lY3ObTm8xejwlkdNaw7v8Pe3zasFEkAF0YY6MGgAwrE60QY6KBBJxBBDBKEGqh@vGsIisQA" rel="nofollow noreferrer">Verify the resulting <span class="math-container">\$n\$</span> for a given matrix to test just this second step</a> (minus leading <code>.Δ</code> and trailing <code>Q</code>). I've added <code>=</code> after both <code>OO</code>, so you can also see the intermediate steps of the reduction.</p>
 </div>
 
 <table id="st">
