--- a/q/267395.html
+++ b/q/267395.html
@@ -26,23 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>1312</td><td>Wolfram LanguageMathematica</td><td>231210T112400Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267416#267416">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>022</td><td>Python</td><td>231209T103239Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267396#267396">ovs</a></td></tr>
-<tr d-ix="2"><td>009</td><td>J</td><td>231212T064724Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267480#267480">Bubbler</a></td></tr>
-<tr d-ix="3"><td>018</td><td>sclin</td><td>231211T035033Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267438#267438">Mama Fun</a></td></tr>
-<tr d-ix="4"><td>004</td><td>05AB1E</td><td>231211T090045Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267448#267448">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>032</td><td>PowerShell Core</td><td>231210T202619Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267422#267422">Julian</a></td></tr>
-<tr d-ix="6"><td>014</td><td>Alice</td><td>231210T192825Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267421#267421">Julian</a></td></tr>
-<tr d-ix="7"><td>005</td><td>Jelly</td><td>231209T132656Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267399#267399">Nick Ken</a></td></tr>
-<tr d-ix="8"><td>021</td><td>JavaScript Node.js</td><td>231209T112653Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267398#267398">Arnauld</a></td></tr>
-<tr d-ix="9"><td>012</td><td>dc</td><td>231210T054613Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267412#267412">Digital </a></td></tr>
-<tr d-ix="10"><td>005</td><td>Nekomata</td><td>231210T014327Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267411#267411">alephalp</a></td></tr>
-<tr d-ix="11"><td>014</td><td>Haskell</td><td>231209T164835Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267404#267404">AZTECCO</a></td></tr>
-<tr d-ix="12"><td>025</td><td>R + gmp</td><td>231209T143122Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267401#267401">Nick Ken</a></td></tr>
-<tr d-ix="13"><td>008</td><td>Charcoal</td><td>231209T135408Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267400#267400">Neil</a></td></tr>
-<tr d-ix="14"><td>3625</td><td>Vyxal</td><td>231209T103908Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267397#267397">lyxal</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Raku Perl 6 rakudo</td><td>240819T074823Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/275048#275048">bb94</a></td></tr>
+<tr d-ix="1"><td>1312</td><td>Wolfram LanguageMathematica</td><td>231210T112400Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267416#267416">138 Aspe</a></td></tr>
+<tr d-ix="2"><td>022</td><td>Python</td><td>231209T103239Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267396#267396">ovs</a></td></tr>
+<tr d-ix="3"><td>009</td><td>J</td><td>231212T064724Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267480#267480">Bubbler</a></td></tr>
+<tr d-ix="4"><td>018</td><td>sclin</td><td>231211T035033Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267438#267438">Mama Fun</a></td></tr>
+<tr d-ix="5"><td>004</td><td>05AB1E</td><td>231211T090045Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267448#267448">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>032</td><td>PowerShell Core</td><td>231210T202619Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267422#267422">Julian</a></td></tr>
+<tr d-ix="7"><td>014</td><td>Alice</td><td>231210T192825Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267421#267421">Julian</a></td></tr>
+<tr d-ix="8"><td>005</td><td>Jelly</td><td>231209T132656Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267399#267399">Nick Ken</a></td></tr>
+<tr d-ix="9"><td>021</td><td>JavaScript Node.js</td><td>231209T112653Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267398#267398">Arnauld</a></td></tr>
+<tr d-ix="10"><td>012</td><td>dc</td><td>231210T054613Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267412#267412">Digital </a></td></tr>
+<tr d-ix="11"><td>005</td><td>Nekomata</td><td>231210T014327Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267411#267411">alephalp</a></td></tr>
+<tr d-ix="12"><td>014</td><td>Haskell</td><td>231209T164835Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267404#267404">AZTECCO</a></td></tr>
+<tr d-ix="13"><td>025</td><td>R + gmp</td><td>231209T143122Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267401#267401">Nick Ken</a></td></tr>
+<tr d-ix="14"><td>008</td><td>Charcoal</td><td>231209T135408Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267400#267400">Neil</a></td></tr>
+<tr d-ix="15"><td>3625</td><td>Vyxal</td><td>231209T103908Z</td><td><a href="https://codegolf.stackexchange.com/questions/267395/smallest-integer-n-such-that-frac-sqrt-log-2n-log-2-log-2-n2/267397#267397">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language(Mathematica)</a>, <del>13</del> 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 16 bytes</h1>
+<pre class="lang-perl prettyprint-override"><code>say -+^2**2¹⁶
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMFNfWWF4sRKBV3tOCMtLQTiQgg_atz2qHErEB3aDGQuLS1J07XYgKTn0E648AIoBaUB" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language(Mathematica)</a>, <del>13</del> 12 bytes</h1>
 <p>12 bytes version, provided by @att</p>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78/19bW9soDgr///@vW1CUmVcCAA" rel="nofollow noreferrer">Try it online!</a></p>
 <pre class="lang-mathematica prettyprint-override"><code>+++2^2^2^2^2
@@ -51,7 +57,7 @@
 <pre class="lang-mathematica prettyprint-override"><code>2^2^2^2^2+2/2
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 22 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 22 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>print(-~2**2**2**2**2)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwU3dzNyC_KISheLKYi4g1itOLYnPzCuJz02siC8uKYpPyUzPLCnWMDQAAc2lpSVpuhbbCoqASjR064y0tBAIKrkASkFpAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -71,7 +77,7 @@ Now, substitute <span class="math-container">\$y=\log_2(x)^{1/4}\$</span>. Note 
 $$</span></p>
 <p>The only integer solution to this is <span class="math-container">\$y=16\$</span>, leaving us with <span class="math-container">\$x=2^{16^4}=2^{2^{2^{2^2}}}\$</span>. The first integer that satisfies the inequality is <span class="math-container">\$x+1\$</span>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 9 bytes</h1>
 <pre><code>&gt;:^^:*~2x
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT0F9TQFWysFdR0FAwUrINbVU3AO8nFbWlqSpmux0s4qLs5Kq86oAsK_Ga3JlQ5SbmdlVBGnZaWcqMeVAeHH6RvZ6WUChbkS84pBQobaQCVmpqbGZlypyRn5CkBrFIBSEE46MicDwoFYsWABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -99,13 +105,13 @@ $$</span></p>
 &gt;:            increment
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/molarmanful/sclin" rel="nofollow noreferrer">sclin</a>, 18 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/molarmanful/sclin" rel="nofollow noreferrer">sclin</a>, 18 bytes</h1>
 <pre><code>1 1+&quot;&quot;S&gt;c1+ ^1+
 </code></pre>
 <p><a href="https://scline.fly.dev/##H4sIAEZCd2UCAzNUMNRWer9_v1KwXbKhtkKcoTYAtxgMTBIAAAA#" rel="nofollow noreferrer">Try it on scline!</a></p>
 <p>Didn't read the question closely x_x.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>₁no&gt;
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//UVNjXr7d//8A" rel="nofollow noreferrer">Try it online.</a></p>
@@ -125,7 +131,7 @@ $$</span></p>
       # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 32 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 32 bytes</h1>
 <p><img src="https://i.sstatic.net/KNWNW.png" alt="code with non printable characters" /></p>
 <p><a href="https://tio.run/##K8gvTy0qzkjNydFNzi9K/f8/OikzPTOvJNbKqiC/XMNQ21DHUFv9/f796tGKhrGa2ob//wMA" rel="nofollow noreferrer" title="PowerShell Core – Try It Online">Try it online!</a></p>
 <p>Explanation:</p>
@@ -134,7 +140,7 @@ $$</span></p>
                                +1  # Increments by 1 and implicitly prints on stdout
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/alice" rel="nofollow noreferrer">Alice</a>, 14 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/alice" rel="nofollow noreferrer">Alice</a>, 14 bytes</h1>
 <p><img src="https://i.sstatic.net/em1J0.png" alt="code with non ascii character" /></p>
 <p><a href="https://tio.run/##S8zJTE79/99I/f3@/RmuGfoK/goOXP//AwA" rel="nofollow noreferrer" title="Alice – Try It Online">Try it online!</a></p>
 <p>The trailing new line is required<br />
@@ -154,7 +160,7 @@ I'm using a screenshot as the non ascii character gets removed on save</p>
 </code></pre>
 <p><a href="https://tio.run/##S8zJTE79/99I/UiDnpZrhr6Cv4ID1///AA" rel="nofollow noreferrer" title="Alice – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 bytes</h1>
 <pre><code>⁹²2*‘
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8//9R485Dm4y0HjXM@P8fAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -166,7 +172,7 @@ I'm using a screenshot as the non ascii character gets removed on save</p>
     ‘ | +1
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 21 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 21 bytes</h1>
 <p><em>-1 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
 <p>The only (decimal) digit used in the source is <code>0</code>.</p>
 
@@ -181,12 +187,12 @@ I'm using a screenshot as the non ascii character gets removed on save</p>
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/e1k63TsMoT0sLFWv@T87PK87PSdXLyU/XSNPQ1PwPAA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.gnu.org/software/bc/manual/dc-1.05/html_mono/dc.html" rel="nofollow noreferrer">dc</a>, 12</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.gnu.org/software/bc/manual/dc-1.05/html_mono/dc.html" rel="nofollow noreferrer">dc</a>, 12</h1>
 <pre><code>2dddd^^^^z+p
 </code></pre>
 <p><a href="https://tio.run/##S0n@/98oBQjigKBKu@D/fwA" rel="nofollow noreferrer" title="dc – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 5 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 5 bytes</h1>
 <pre><code>¥:*Ë→
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHHBgqWlJWm6FisPLbXSOtz9qG3SkuKk5GKoKEwWAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -198,21 +204,21 @@ I'm using a screenshot as the non ascii character gets removed on save</p>
     →   Increment
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 14 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 14 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>succ$2^2^2^2^2
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7NyfmfZhvzv7g0OVnFKA4K/@cmZuYp2CoUFGXmlSik/f@XnJaTmF78Xze5oAAA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 <p>Port of @ovs <a href="https://codegolf.stackexchange.com/a/267396/84844">python answer</a></p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://www.r-project.org/" rel="noreferrer">R</a> + gmp, 25 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://www.r-project.org/" rel="noreferrer">R</a> + gmp, 25 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>gmp::as.bigz(2)^2^2^2^2+T
 </code></pre>
 <p><a href="https://rdrr.io/snippets/embed/?code=gmp%3A%3Aas.bigz(2)%5E2%5E2%5E2%5E2%2BT" rel="noreferrer">Try it at RDRR!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/267396/42248">@ovs’ Python answer</a>, so be sure to upvote that one too! R has no native bigint support so this needs the gmp package.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 8 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 8 bytes</h1>
 <pre><code>Ｉ⊕Ｘ²Ｘ⁴¦⁸
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwzMvuSg1NzWvJDVFIyC/PLVIw0hHAcIw0VGw0AQB6////@uW5QAA" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -230,7 +236,7 @@ I'm using a screenshot as the non ascii character gets removed on save</p>
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwzMvuSg1NzWvJDVFIyC/PLVIw0hHAcJwyS9NygEKG2nqKMDYCDEIsP7//79uWQ4A" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: As above, but uses <code>Doubled</code> (<code>⊗</code>) to make <code>4</code> and <code>8</code> from <code>2</code>. (A port of @ovs' Python solution would have been 12 bytes.)</p>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 29 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 3.625 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 29 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 3.625 bytes</h1>
 <pre><code>k₴E›
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwia+KCtEXigLoiLCIiLCIiXQ==" rel="noreferrer">Try it Online!</a></p>
