--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240819T133955Z
+"   /golfscore                                      20240819T142443Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/69714.html">Is it a valid consonant cluster in Lojban?      : 0069714</a>
 <a href="q/90517.html">Print every printable ASCII character without us: 0090517</a>
 <a href="q/179464.html">Covering a Skyline with brush strokes           : 0179464</a>
 <a href="q/267395.html">Smallest integer \$n\$ such that \$\frac{\sqrt{\: 0267395</a>
