--- a/q/90517.html
+++ b/q/90517.html
@@ -88,7 +88,7 @@
 <tr d-ix="59"><td>269</td><td>CJam</td><td>160821T133525Z</td><td><a href="https://codegolf.stackexchange.com/questions/90517/print-every-printable-ascii-character-without-using-it/90526#90526">xenia</a></td></tr>
 <tr d-ix="60"><td>355</td><td>Pyke</td><td>160821T132510Z</td><td><a href="https://codegolf.stackexchange.com/questions/90517/print-every-printable-ascii-character-without-using-it/90520#90520">Blue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, score 268</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, score 268 <em>(non-competing)</em></h1>
 <p>Every character other than those listed below is of the pattern <code>&lt;charcode&gt;O</code>.</p>
 <pre><code>space &gt; ð
 * &gt; •
