--- a/q/274951.html
+++ b/q/274951.html
@@ -26,13 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>658</td><td>Python</td><td>240819T183943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275054#275054">Kolen Ch</a></td></tr>
-<tr d-ix="1"><td>049</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>1053</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>838</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="1"><td>653</td><td>Python</td><td>240819T183943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275054#275054">Kolen Ch</a></td></tr>
+<tr d-ix="2"><td>049</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="4"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, 658 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> <s>1201</s> <s>1053</s> 838 bytes</h1>
+<pre><code>/^(0|1)$/bz;x;s/^/0001/;x
+:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
+G;s/(.*)\n(.*)/\2\n\1/
+:b;y/10/ab/;G;s/\n//2
+:c;s/(.*)\b([ab]{2,})\b( *)(\n#*)/\2\n\3\1\4/
+h;s/\n.*//;s/^/.\n.\n/
+:d;s/(\.*)\n(\.*)/\1\1\1&amp;\2/
+s%(.*)\n(.*)\2\n(.*)%sed 's/^\1$/\&amp;/;t;i\1\\n\2\2\nq;:;s/\2/\&amp;\\n/g;1i\2\2'&lt;&lt;&lt;\3%e
+/\.\n\./td
+s%(\.*).(.*)%sed 'x;1s/.*/\1/;1!s/.//;T;/^$/i!\n:;x'&lt;&lt;&lt;'\2'%e;s/!/\n/
+s/.*/sed '2~2{H;d};$x'&lt;&lt;&lt;'&amp;'/e
+s/(.)\n/\1/g;y/\n/ /;G;s/\n[ba]*\n/ /
+/[ab]{2}/bc;h;s/\n.*//;s/[ab]/&amp; /g;y/ /\n/
+:j;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;tj
+/aa+\n./s/.*/sed -rn 'h;sa.aa;x;:;sa.*a\&amp;amp;T;x;sa.aa;x;t'&lt;&lt;&lt;'&amp;'/e
+s/\n(\n*)/\1/g;/\n/bj
+y/a/#/;s/b//;G;s/\n.*\n/ /
+T;s/^(#*) \1([01]*)$/\2/;tz;s/#* //
+s/^(#*)([01]*)$/\2\n\1/;h;s/\n.*//;T
+s/10(0*)(1*)$/01\2\1/;t
+s/(0*)0(1*)/\21\1/;t
+y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
+:;G;s/\n.*\n/\n/;h;s/\n.*//;x;bb
+:z
+</code></pre>
+<p><a href="https://tio.run/##VVLBctowEL3rK5QBjHEbr2WStlg5dqY5dKaX3BCZkUAlZkB2LZES0vTTS3dFSSgw9vL09u3b1Xq7OOzkXu54j7fbEGq35JvtOtTt2vLaIeS5t63tdLALbp64sz/XtbOeb6x2nocHy2@/ff3MfavnNvV2MfS8cZY/6q7WZm1HfGlRY960NQo0j7bj37tmExPbzj7WzdZzUswRqj1fbX3g87XVned1OMB9WvwSoz4Y9Cg93ENRFALkjlUa/07F5WQGSQ@W8glEOb66/vDx0wSKUwjI6RUw6YEMxC8AluwLBmmejZSjJ6hSOSWAVYY0CtAGJFGUAyhZNT@xTTrVZvZcvn@hmGejVLneKX@shLoC9hDz8gwges0xRhlWLUhEHWuqWFTQN1ElMD94M0Na9B7gIPkQJZTog0rQvawxAQuVRPkhKypU4hFi2Lyo6WB4c3OjxgPLQGFZlUNYkDoVzN9Ud1J4QIvYsxQXGKLZOwn3fagvlKvkjmSGqDawWOSC5sBiQswuf5fPt3LxIvtHXjIEy2hC2AFJ0kVgxE8znBo9yyLA4Di/FzBz@d@gCIeEx1we61UrhI1yBgwcIw2aIk3YKUIMw7Bi@H6HavBq87JzfIg1dK417k1FUaZVojct9rp7PQjnPdDduHg36IRsmBV7wmK9aAFOHeX/2rmjK05xA7gS6bQQswzXFO9Ehj1tXcaB5hYZZ8dx187bv0OSKNICWYIohUASUgJNFdGCYEwURxBXFLdYxk4T/OCszn3h71x8J41h1f5wEKxkY3bFrtnkT9OGunH@cNn9BQ" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
+<p>this does basically the same thing that the other answers are doing. we come up with a way to generate an infinite list of matrices <a href="https://tio.run/##VY7BTsMwDIbveQpLINZWgJMd1xfYA3DsJdq8NqhLqsRZ2csTnE4g4YP9@7N/y4nOpRzVQR3VokaV8L0bPGL/IdLoRndtY7r2GbUZ9oPBnoVXqivGYW8e8I4GNfbVji8SwsoT8OQSnMKZYHXzDJ85sbSenc8EIfOSWfQIV8vRnSjBJYYrrJNlulGExDZu85udxXAPGcQBzsthklKbhsZX@L1jjJZ45Fr/r24/pCmsG/P0xbBb7Eg7CJe/F9qiv8PCLvhU3uIP" rel="nofollow noreferrer">(check the order here)</a>, calculate the value of each matrix <a href="https://tio.run/##bVLbUtswEH33V4gxdohDvJahF6wMw1v7AbxFMCNjk5gEhdpOm04m/fSmZ2VMAlNNRj7Zy9mzq23KYr//TTIhk5P6phrSlij1sgfAszga6vxsavK7bXq@YyxgsWd@NCSdaqsvtMR9Sd7cZcYREcA9IGi8rOj4/BC4BPZpMpHpxeWnz1@@XvmJvCZXZTiJIy3BGg/j6BrMpNrSc6nxVoe7kFKVLTh0moyv7qIhCwsJtVMtEbvwXrXaw01NWYhxLQZNcK/T00CHGqJkoFpVIRE4HUwmk4G@GFDp3bLQrWMf7Yhr0ky1hZc9wjGVMFPow4RJ9fIp6SE34Sd05UMKxydEM1bkj4aQxwp/o/OY3qk80qfTTl0wg7RXVRKqkBYjkdlHFGKGzY3jdPk3nD/YKNkEcRRwY/IEMAjUraL7U6pOtFWZ2nR06eCG53/CI4UMvJNLT/@k2@@q2KnTLi7kWbgXQRyEc8NAot@MaW7uImfwqN8Kyh/Uu9dnB4XCJQtXMHuCOdc2p5w6ZMgwMmzrEWyA7ZOH7whs9KZzXFsxQA0TG6M26AooMjo0zy/odvPmaI@bwJi05T3lNlhG/uRlSy51vITm4xKa4yXk8BzvufdFOy/F0jSteFyta1HZl3XbCFOXzlHZovpZFWuzFD/WpqiNhXP12CWt7EysbHkufs2rhznu0oKkfjZti94MWMSsropzRK4WjVhWizLzPF8kOO56w1L@H3cx@MkkkULisAsRzvABH2L2LlGyQTLskJccn85z@DLkfzhsY9x/e7uXHMiSrsRrVB/5vkQnQspjjr@rl7Za2WY/rv8B" rel="nofollow noreferrer">(check the math here)</a>, and then see if it's equal to the input. The two individual steps are fast and easy enough to check edge cases with; it's only the combined loop that takes a long time.</p>
+<p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up.</p>
+<p>the <code>\&amp;amp;</code> is not an html error, at this point I have started using sed to write and modify sed scripts to build this answer with and when I saw it show up inside of a command I thought it was too cute to change it back. (the actual command it's part of is <code>sa.*a\&amp;amp</code>, or more legibly written as <code>s/.*/\&amp;/mp</code>)</p>
+<p>we're back into the triple digits! this golf also brought massive performance improvements; it's about twice as fast for 5 &amp; 9, and the gains get even better as size increases (it still can't handle big inputs like 6 on TIO yet though). I'm not going to add any really detailed explanation yet; golfing can change an explanation a lot in sed since changing how you're storing or transforming the data itself is more effective when golfing than just finding a different way to say the same thing. once the golfing starts slowing down I'll start breaking things down and explaining them.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python, 653 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from numpy import*
 Z=zeros
 O=bool
@@ -42,7 +75,7 @@ N=lambda M:M.shape[0]
 z=lambda M,n: M if N(M)==n else (lambda w: (a:=Z((n,n),O),[a.__setitem__((i*w,j*w),M[i,j]) for i in r(N(M)) for j in r(N(M))],a)[2])([2**i for i in r(n.bit_length()) if N(M)*2**i==n][0])
 def g(n):
     if n &lt; 2:return array([[n]], O)
-    if n &lt; 5:r = Z(4, O);r[:n] = True;return r.reshape(2, 2)
+    if n &lt; 5:r = Z(4, O);r[:n]=1;return r.reshape(2, 2)
     else:a,b,c,d=(lambda n:next((i,j,k,l)for i in R(n)for j in R(i)for k in R(j)for l in R(k)if i*i+j*j+k*k+l*l==n))(n);A,B,C,D=map(g,(a,b,c,d));m=max(map(N,[A,B,C,D]));return block([[z(A,m),z(B,m)],[z(C,m),z(D,m)]])
 lambda n:&quot;;&quot;.join(&quot;&quot;.join(&quot;1&quot; if c else &quot;0&quot; for c in l) for l in g(n))
 </code></pre>
@@ -61,7 +94,7 @@ lambda n:&quot;;&quot;.join(&quot;&quot;.join(&quot;1&quot; if c else &quot;0&qu
 78 -&gt; 11111010;00000000;00001000;00000000;10101000;00000000;00000000;00000000
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>50</s> 49 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>50</s> 49 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Íonîü2íε`U0LsãεXô}Σ˜O]í€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
 </code></pre>
 <p>Brute-force. Generates all <span class="math-container">\$2^k\times 2^k\$</span> sized matrices consisting of 0s and 1s, and will output the first valid one for the given input-integer <span class="math-container">\$n\$</span>.</p>
@@ -118,44 +151,6 @@ lambda n:&quot;;&quot;.join(&quot;&quot;.join(&quot;1&quot; if c else &quot;0&qu
            # (after which the found matrix is output implicitly)
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f8/2uX0nHTTRw07lY3ObTm8xejwlkdNaw7v8Pe3zasFEkAF0YY6MGgAwrE60QY6KBBJxBBDBKEGqh@vGsIisQA" rel="nofollow noreferrer">Verify the resulting <span class="math-container">\$n\$</span> for a given matrix to test just this second step</a> (minus leading <code>.Δ</code> and trailing <code>Q</code>). I've added <code>=</code> after both <code>OO</code>, so you can also see the intermediate steps of the reduction.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> <s>1201</s> 1053 bytes</h1>
-<pre><code>/^(0|1)$/bz;x;s/^/0001/;x
-:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
-G;s/(.*)\n(.*)/\2\n\1/
-:b;y/10/ab/;G;s/\n//2
-:c;s/(.*)\b([ab]{2,})\b( *)\n(#*)/\2\n\3\1\n\4/
-h;s/\n.*//;s/^/\n\n/
-:d;s/\n/#&amp;/
-:e;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;te
-s/\n/.{\&amp;}&amp;/2;:k;s/([0-9]*)(.*)&amp;/\1\2\1/;tk
-s/(.*)\n(.*)\n(.*)/sed -r 's%^\2$%\&amp;\\n\1%;t;i\1\\n\2'&lt;&lt;&lt;'\3'/e
-T;s/\{[0-9]+}/{\&amp;}/g;td
-:f;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tf;s/0//g
-s/(#+)\1/\1/;y/#/./
-s/(.*)\n(.*)/sed -r 's%\2%\&amp;\\n%g;i\2'&lt;&lt;&lt;'\1'/e;y/./#/;s/#+/&amp;&amp;/
-s@(#+)\n(.*)@sed 'x;1s%.*%\1%;1!s%.%%;T;/^$/i!\n;:;x'&lt;&lt;&lt;'\2'@e;s/!/\n/
-s/.*/sed '2~2{H;d};$x'&lt;&lt;&lt;'&amp;'/e
-s/(.)\n/\1/g;y/\n/ /;G;s/\n[ba]*\n/ /
-/[ab]{2,}/bc;h;s/\n.*//;s/[ab]/&amp; /g;y/ /\n/
-:j;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;tj
-/aa+\n./s/.*/sed -rn 'h;sa.aa;x;:;sa.*a\&amp;amp;T;x;sa.aa;x;t'&lt;&lt;&lt;'&amp;'/e
-s/\n(\n*)/\1/g;/\n/bj
-y/a/#/;s/b//;G;s/\n.*\n/ /
-T;s/^(#*) \1([01]*)$/\2/;tz;s/#* //
-s/^(#*)([01]*)$/\2\n\1/;h;s/\n.*//;T
-s/10(0*)(1*)$/01\2\1/;t
-s/(0*)0(1*)/\21\1/;t
-y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
-:;G;s/\n.*\n/\n/;h;s/\n.*//;x;bb
-:z
-</code></pre>
-<p><a href="https://tio.run/##lVPBbtpAEL3vV2xkbIMpHq9J2saLohwqNYdKveTGBmkNG2ICxvKaFELpp5fOLHFEjpWQGc/Oe/Pe7Nia2XErX@WWe7zaNE1Rzvlqs2yKaml4UWLKcmsqU@vGzHi@46X5tSxKY/nK6NLy5snwu58/vnFb6anpWjMLLV@Xhr/outD50vT43CDHdF0VSLB@MTV/rNcrB6xq81KsN5YTY4ypwvLFxjZ8ujS6trxojjDpJr9FrwM5apQWJpAkiQC5ZZnG17EYXD9A4MFc7kCkw8urz1@@XkPShoA1XgLXHsiG6hOAOfuOQTeOeqqkJ6hUlUoAy3LiSEDnIKlElQApy6Ztdd4d6/xhn346UMwd3mvxQyXweQnsySHjCMCpxWSJ1LMTnxdgbEgTjEbvcr1E3IDr0hvFkRLIGvfi6AaZUbZhDhrvVXAIIJXZM5WOEzQe9UhYANg7RQeyeWbnzt784Z3wQc1D609U2vFVoMivLxtZIBDjNByNRqEahmDYPQndO/b@AagnjraZsezxP6f92E4bFXn9HsojhTt0HsMHlWf6VHpS589R2psqgaoQFiOQ2PsQ4AztreN0@FvCh1sprB9HPhkTFxj6vryXMOlAcaFKmcntiS4Nb2n@FzRSlIH35ODpn3R/J2cH2TnVBTQLdyNYh8LJMEa83Yxxrh8il2DQbgXkU/nh9ukAAu7A3DXMFpjOVZlDDqdIg6ZIU66NMIdhs2D430c2eNc5qEseYg8da42fQ0ZRpFWgVxW63b4fNOcmcEyqpD0lGyQjX7AdNnMDzaG1FL/5oQ2Y0GJz3MRxInDLOqdNfKULiDjQ4FzF2bH7hM7t32ORSLoJVgkqSdodpbFiNqE0AsUpifuE6yKd0yCgO87OdeHvnHwr85xlr8djwgRL2ZBdsqu/66op1qU9Dup/" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
-<p>this does basically the same thing that the other answers are doing. we come up with a way to generate an infinite list of matrices <a href="https://tio.run/##VY7BTsMwDIbveQpLINZWgJMd1xfYA3DsJdq8NqhLqsRZ2csTnE4g4YP9@7N/y4nOpRzVQR3VokaV8L0bPGL/IdLoRndtY7r2GbUZ9oPBnoVXqivGYW8e8I4GNfbVji8SwsoT8OQSnMKZYHXzDJ85sbSenc8EIfOSWfQIV8vRnSjBJYYrrJNlulGExDZu85udxXAPGcQBzsthklKbhsZX@L1jjJZ45Fr/r24/pCmsG/P0xbBb7Eg7CJe/F9qiv8PCLvhU3uIP" rel="nofollow noreferrer">(check the order here)</a>, calculate the value of each matrix <a href="https://tio.run/##bVLbUtswEH33V4gxdohDvJahF6wMw1v7AbxFMCNjk5gEhdpOm04m/fSmZ2VMAlNNRj7Zy9mzq23KYr//TTIhk5P6phrSlij1sgfAszga6vxsavK7bXq@YyxgsWd@NCSdaqsvtMR9Sd7cZcYREcA9IGi8rOj4/BC4BPZpMpHpxeWnz1@@XvmJvCZXZTiJIy3BGg/j6BrMpNrSc6nxVoe7kFKVLTh0moyv7qIhCwsJtVMtEbvwXrXaw01NWYhxLQZNcK/T00CHGqJkoFpVIRE4HUwmk4G@GFDp3bLQrWMf7Yhr0ky1hZc9wjGVMFPow4RJ9fIp6SE34Sd05UMKxydEM1bkj4aQxwp/o/OY3qk80qfTTl0wg7RXVRKqkBYjkdlHFGKGzY3jdPk3nD/YKNkEcRRwY/IEMAjUraL7U6pOtFWZ2nR06eCG53/CI4UMvJNLT/@k2@@q2KnTLi7kWbgXQRyEc8NAot@MaW7uImfwqN8Kyh/Uu9dnB4XCJQtXMHuCOdc2p5w6ZMgwMmzrEWyA7ZOH7whs9KZzXFsxQA0TG6M26AooMjo0zy/odvPmaI@bwJi05T3lNlhG/uRlSy51vITm4xKa4yXk8BzvufdFOy/F0jSteFyta1HZl3XbCFOXzlHZovpZFWuzFD/WpqiNhXP12CWt7EysbHkufs2rhznu0oKkfjZti94MWMSsropzRK4WjVhWizLzPF8kOO56w1L@H3cx@MkkkULisAsRzvABH2L2LlGyQTLskJccn85z@DLkfzhsY9x/e7uXHMiSrsRrVB/5vkQnQspjjr@rl7Za2WY/rv8B" rel="nofollow noreferrer">(check the math here)</a>, and then see if it's equal to the input. The two individual steps are fast and easy enough to check edge cases with; it's only the combined loop that takes a long time.</p>
-<p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up.</p>
-<p>the <code>\&amp;amp;</code> is not an html error, at this point I have started using sed to write and modify sed scripts to build this answer with and when I saw it show up inside of a command I thought it was too cute to change it back. (the actual command it's part of is <code>sa.*a\&amp;amp</code>, or more legibly written as <code>s/.*/\&amp;/mp</code>)</p>
-<p>I'm pretty sure I can get this into the triple digits, so I'm not going to add any really detailed explanation yet; a bit of golfing can change an explanation a lot in sed. once the golfing starts slowing down I'll start breaking things down and explaining them.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 101 bytes</h1>
 <pre><code>Ｎθ≔⦃⁰⟦0⟧¹⟦1⟧⦄ηＷ∧¬§ηθη«≔⦃⦄η≔ＥιλζＦζＦζＦζＦζ«≔ΣＸ⟦νμλκ⟧²ε≔⁺Ｅ§ιν⁺ξ§§ιμπＥ§ιλ⁺ξ§§ικπδ¿∨¬§ηε‹ΣΣδΣΣ§ηε§≔ηεδ»»§ηθ
