--- a/q/274951.html
+++ b/q/274951.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>630</td><td>Python</td><td>240819T183943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275054#275054">Kolen Ch</a></td></tr>
+<tr d-ix="0"><td>628</td><td>Python</td><td>240819T183943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275054#275054">Kolen Ch</a></td></tr>
 <tr d-ix="1"><td>838</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
 <tr d-ix="2"><td>049</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="4"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, 630 bytes</h1>
+<div id="pu0" class="pu"><h1>Python, 628 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from numpy import*
 Z=zeros
 O=bool
@@ -44,7 +44,7 @@ def g(n):
     if n&lt;2:return array([[n]],O)
     if n&lt;5:r=Z(4,O);r[:n]=1;return r.reshape(2,2)
     else:a,b,c,d=(lambda n:next((i,j,k,l)for i in R(n)for j in R(i)for k in R(j)for l in R(k)if i*i+j*j+k*k+l*l==n))(n);A,B,C,D=map(g,(a,b,c,d));m=max(map(N,[A,B,C,D]));return block([[z(A,m),z(B,m)],[z(C,m),z(D,m)]])
-lambda n:&quot;;&quot;.join(&quot;&quot;.join(str(int(c))for c in l)for l in g(n))
+lambda n:&quot;;&quot;.join(&quot;&quot;.join(map(str,map(int,l)))for l in g(n))
 </code></pre>
 <h1>Test</h1>
 <p>Assign the function to <code>G</code>, and</p>
