--- a/q/272303.html
+++ b/q/272303.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>C clang</td><td>240820T142313Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275066#275066">jdt</a></td></tr>
+<tr d-ix="0"><td>048</td><td>C clang</td><td>240820T142313Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275066#275066">jdt</a></td></tr>
 <tr d-ix="1"><td>046</td><td>R</td><td>240820T125629Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275065#275065">Kirill L</a></td></tr>
 <tr d-ix="2"><td>078</td><td>tinylisp 2</td><td>240406T043201Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272376#272376">DLosc</a></td></tr>
 <tr d-ix="3"><td>020</td><td>Haskell + hgl</td><td>240404T183008Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272336#272336">Wheat Wi</a></td></tr>
@@ -42,11 +42,11 @@
 <tr d-ix="13"><td>055</td><td>Python 3.8</td><td>240403T210710Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272307#272307">Jonathan</a></td></tr>
 <tr d-ix="14"><td>046</td><td>JavaScript Node.js</td><td>240403T203633Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272306#272306">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 49 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 48 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>i;q((**p)(*),c,*v,n){for(i=0;i&lt;n;)p[i%c](v+i++);}
+<pre class="lang-c prettyprint-override"><code>i;q((**p)(),c,*v,n){for(i=0;i&lt;n;)p[i%c](v+i++);}
 </code></pre>
-<p><a href="https://tio.run/##hZVhj6IwEIa/@ysmJpsA1khLAT3P@yPGS4jKhkSRVZbd3Ma/ft5MAcuwyvmhOH2Hdt6HKWyn20OSv95u2fLNcTyvcB3PFVvhVSJ3v9LT2clW/jL7mS/dYp29bDdONckmE3d5vWV5CYmDowefLnzB51puYIUXfwMTEy3hOqKs45OsKcsqn2R5LGv3JGvGsorvWcXpw6FMYSbcNjMdylRux8moOmU7KM6YX99TJYeLAFokx7tHgD8EBiQCUQPCBkTLaPQzd6fO@GUHY2EWWGdYi9GL9/LijMcY4V4GW5LlDq1s5NkMyv2llD9gPRHgYXVriRUKCARoLPuXiTFYCJDBxtxDqzheKdcb15SMLlfoMxFQwnV5T6kwwQh2wVZ@c0qcvGR/9qcU/7rIuQlwWRctWLViKkatL0PsP4ldiwotegImZHFhKpoLiLCu2iX5wwmFMzI0w4K5VT23pYCEuVWNW7Z2x7CyhhUzrMiwVSumYsQNDyd2DQdoeNoYJmsaTSlTnCR/8@bpoiJ1bVzhVft4Vcx60LN@7FsP2gf9YJcOgcASCBiBgAhYtWIqRpzAcGKXgG66uoWARYWmEWX9kELb41RvjDPYTzESiKlhI58GzVjoB03fx6FbHI/26/DQlodmPDTxsGrFVIw4j@HELo8QeaQtjPuhNHXhs4q7xz2qO0GjpPxAmnHOSIQ9EmkfQ/jt@N936kAILYSQQQgJglUrpmLEIQwmtu9JBiNCGL8FzARMiYcylc1Nrdq87nTTG6To9kRLtaBRU5v7PgMS9YAUAnYCjoxJ1DB5tFsHSmShRAxKRFCsWjEVIw5lMPEhlPh@YvDNMXvSJ23J0u99IFCXtb6oW4cmQgYpfnh@8I2yY5zi571jd@8Aiy2wmAGLCZhVK6ZixIENJnJg5335fs7Bx@/q7e82PSSvl9v04zY9HP8B" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##hZVhj6IwEIa/@ysmJpsA1khLAT3P@yPGS4jKhkSRVZbd3Ma/ft5MAcuwyvmhOH2Hdt6HKWyn20OSv95u2fLNcTyvcB1XbIVXidz9Sk9nJ1v5y@xnvnSLdfay3TjVJJtM3OX1luUlJA6OHny68AWfa7mBFV78DUxMtITriLKOT7KmLKt8kuWxrN2TrBnLKr5nFacPhzKFmXDbzHQoU7kdJ6PqlO2gOGN@fU@VHC4CaJEc7x4B/hAYkAhEDQgbEC2j0c/cnTrjlx2MhVlgnWEtRi/ey4szHmOEexlsSZY7tLKRZzMo95dS/oD1RICH1a0lViggEKCx7F8mxmAhQAYbcw@t4nilXG9cUzK6XKHPREAJ1@U9pcIEI9gFW/nNKXHykv3Zn1L86yLnJsBlXbRg1YqpGLW@DLH/JHYtKrToCZiQxYWpaC4gwrpql@QPJxTOyNAMC@ZW9dyWAhLmVjVu2dodw8oaVsywIsNWrZiKETc8nNg1HKDhaWOYrGk0pUxxkvzNm6eLitS1cYVX7eNVMetBz/qxbz1oH/SDXToEAksgYAQCImDViqkYcQLDiV0CuunqFgIWFZpGlPVDCm2PU70xzmA/xUggpoaNfBo0Y6EfNH0fh25xPNqvw0NbHprx0MTDqhVTMeI8hhO7PELkkbYw7ofS1IXPKu4e96juBI2S8gNpxjkjEfZIpH0M4bfjf9@pAyG0EEIGISQIVq2YihGHMJjYvicZjAhh/BYwEzAlHspUNje1avO6001vkKLbEy3VgkZNbe77DEjUA1II2Ak4MiZRw@TRbh0okYUSMSgRQbFqxVSMOJTBxIdQ4vuJwTfH7EmftCVLv/eBQF3W@qJuHZoIGaT44fnBN8qOcYqf947dvQMstsBiBiwmYFatmIoRBzaYyIGd9@X7OQcfv6u3v9v0kLxebtOP2/Rw/Ac" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 46 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(L,v)c(a&lt;-v[1],Map(\(x,y)a&lt;&lt;-x(a,y),L,v[-1]))
