--- a/q/219631.html
+++ b/q/219631.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>Arturo</td><td>240821T122300Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/275077#275077">chunes</a></td></tr>
+<tr d-ix="0"><td>048</td><td>Arturo</td><td>240821T122300Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/275077#275077">chunes</a></td></tr>
 <tr d-ix="1"><td>057</td><td>Desmos</td><td>230110T034442Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/256544#256544">Aiden Ch</a></td></tr>
 <tr d-ix="2"><td>046</td><td>Factor</td><td>221230T201642Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/256202#256202">chunes</a></td></tr>
 <tr d-ix="3"><td>006</td><td>05AB1E</td><td>210310T161332Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/220509#220509">Kevin Cr</a></td></tr>
@@ -64,10 +64,10 @@
 <tr d-ix="35"><td>011</td><td>Charcoal</td><td>210224T004429Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/219636#219636">Neil</a></td></tr>
 <tr d-ix="36"><td>052</td><td>Retina 0.8.2</td><td>210224T003921Z</td><td><a href="https://codegolf.stackexchange.com/questions/219631/remove-excessive-occurrences/219633#219633">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 49 bytes</h1>
-<pre class="lang-arturo prettyprint-override"><code>$[a,n][o:@.of:10 0select a'x-&gt;n&gt;=o\[x]:&lt;=o\[x]+1]
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 48 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>$[a,n][o:@.of:10 0filter a'x-&gt;n&lt;o\[x]:&lt;=o\[x]+1]
 </code></pre>
-<p><a href="http://arturo-lang.io/playground?HQvZMr" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="http://arturo-lang.io/playground?D7P02c" rel="nofollow noreferrer">Try it!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 57 bytes</h1>
 <pre><code>f(l,n)=l[[l[1...i][l=l[i]].lengthfori=[1...l.length]]&lt;=n]
