--- a/q/219631.html
+++ b/q/219631.html
@@ -68,6 +68,14 @@
 <pre class="lang-arturo prettyprint-override"><code>$[a,n][o:@.of:10 0filter a'x-&gt;n&lt;o\[x]:&lt;=o\[x]+1]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?D7P02c" rel="nofollow noreferrer">Try it!</a></p>
+<h3>Explanation</h3>
+<pre><code>$[a,n][]         ; a function taking args a and n
+o:               ; to o, assign
+@.of:10 0        ; an array of ten zeros
+filter a'x-&gt;     ; remove elts from a with func, current elt is x
+n&lt;               ; is n less than
+o\[x]:&lt;=o\[x]+1  ; increment and return o[x]
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 57 bytes</h1>
 <pre><code>f(l,n)=l[[l[1...i][l=l[i]].lengthfori=[1...l.length]]&lt;=n]
